loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:-27: error: Unmatched closing brace '}' ignored here
	}
        ^LoopStairs:-26: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^LoopStairs:-15: error: illegal start of statement (no modifiers allowed here)
	override def forward() {
        ^LoopStairs:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^